--- a/new_one.cfg
+++ b/new_one.cfg
@@ -54,6 +54,8 @@ bind "e" "+silentdefuse";
 //Launch options
 //+ex_interp 0.01 -nofbo -gl -w800 -32b -full -refresh 75 -nomousegrab -nomsaa
 
+echo "[========== File is configured successfully ! ==========]"
+
 name ".::ElectriX::."
 
 writecfg ahmad
